@@ -1,3 +1,9 @@
+2012-12-12  Steven Bosscher  <steven@gcc.gnu.org>
+	    Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/52640
+	* gcc.c-torture/compile/limits-externdecl.c: New test.
+
 2012-12-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* gfortran.dg/vect/fast-math-pr38968.f90: Decrease n
